@@ -1,5 +1,10 @@
 2005-02-03  Mark McLoughlin  <mark@skynet.ie>
 
+	* admin-tool/profilesdialog.py: hook up edit to
+	protosession.
+
+2005-02-03  Mark McLoughlin  <mark@skynet.ie>
+
 	* admin-tool/profilesdialog.py: make new and delete
 	do stuff.
 
